# Compiler-Principles

lab1-lexer/: CMakeLists.txt  overall.md
lab1-lexer/include/: lexer.h  token.h
lab1-lexer/source/: lexer.cpp  scan.cpp  token.cpp
lab1-lexer/testcase/: a.c  a.txt  b.c  b.txt  common.c  common.txt  long_valid1.c  long_valid1.txt  long_valid2.c  long_valid2.txt  num.c  num.txt
lab2-llparser/: 5.txt  6.txt  example.cpp  example1.cpp  ll-parser  ll-parser.cpp  report.md
lab2-parser/: 1.txt  2.txt  3.txt  ll-parser  ll-parser.cpp
lab3-lrparser/: gram1.txt  gram3.txt  gram4.txt  gram5.txt  in1.1.txt  in1.txt  in2.txt  in4.txt  in5.txt  main  main.cpp  report.md
lex/: lex.l  lex.yy.c
